--- a/1주차.md
+++ b/1주차.md
@@ -1,1 +1,14 @@
 ## 1주차
+
+- 일단 토이프로젝트 하나를 각자 만들고, 이후엔 개인프로젝트?
+- 리액트란?
+- 리액트에 대해서 각자 공부&정리하고 PR 넣기
+- 한 주간 TIL 깃헙에 올리기
+- 프로젝트 : 날씨.
+
+    → 기능별로 나눠서, JS로 먼저 하고 리액트로 변경
+
+- CRA 써서 react 하면됨
+- 날씨 프로젝트
+
+    → 로그인 기능 구현 >>>  JSON 서버 사용 권장
