--- a/1주차.md
+++ b/1주차.md
@@ -1,14 +1,28 @@
-## 1주차
+# 회의내용
 
-- 일단 토이프로젝트 하나를 각자 만들고, 이후엔 개인프로젝트?
+- 일단 토이프로젝트 하나를 각자 만들고, 이후엔 개인프로젝트
 - 리액트란?
+
+### **프로젝트** : 날씨앱
+
+- 기능별로, JS로 구현 → 리액트로 변경
+- react는 CRA
+
+    → index.js / app.js / app.css를 기본으로.
+
+    → class 써도되고 function 써도됨 <br><br>
+   
+
+- 애자일 개발
+- 깃헙 settings 에서 깃헙 페이지 생성 ( 루트에 파일들 위치해야함 )<br><br>
+
+
+- 벌금 : 카카오뱅크 공동계좌?로
+
+# 다음주 과제
+
+- 1일 1TIL ( 챌린지. 벌금x )
 - 리액트에 대해서 각자 공부&정리하고 PR 넣기
-- 한 주간 TIL 깃헙에 올리기
-- 프로젝트 : 날씨.
+- 날씨 프로젝트 회원가입, 로그인까지 구현(JS → React)
 
-    → 기능별로 나눠서, JS로 먼저 하고 리액트로 변경
-
-- CRA 써서 react 하면됨
-- 날씨 프로젝트
-
-    → 로그인 기능 구현 >>>  JSON 서버 사용 권장
+    →  JSON 서버 사용 권장 ([참고](https://react.vlpt.us/redux-middleware/08-json-server.html))
